--- a/rails_best_practices_output.html
+++ b/rails_best_practices_output.html
@@ -57,21 +57,9 @@
       to see more useful Rails Best Practices.
     </p>
     <p>
-        Found 2 warnings.
+        No error found. Cool!
     </p>
     <table>
-          <tr>
-              <td>
-                <input type="checkbox" class="error-type" id="ReplaceInstanceVariableWithLocalVariableReview" value="ReplaceInstanceVariableWithLocalVariableReview"
-                />&nbsp;<label for="ReplaceInstanceVariableWithLocalVariableReview">Replace Instance Variable With Local Variable</label>
-              </td>
-          </tr>
-        <tr>
-          <td colspan="3">
-            <button id="show-all">Check all</button>
-            <button id="show-none">Uncheck all</button>
-          </td>
-        </tr>
     </table>
     <table class="result">
       <thead>
@@ -82,24 +70,6 @@
         </tr>
       </thead>
       <tbody>
-          <tr class="ReplaceInstanceVariableWithLocalVariableReview">
-            <td class='filename'>
-                app/views/layouts/partials/_search_navigation.html.slim
-            </td>
-            <td class='line'>7</td>
-            <td class='message'>
-              <a href='http://rails-bestpractices.com/posts/27-replace-instance-variable-with-local-variable' target='_blank'>replace instance variable with local variable</a>
-            </td>
-          </tr>
-          <tr class="ReplaceInstanceVariableWithLocalVariableReview">
-            <td class='filename'>
-                app/views/offers/shared/_basic_search.html.slim
-            </td>
-            <td class='line'>2</td>
-            <td class='message'>
-              <a href='http://rails-bestpractices.com/posts/27-replace-instance-variable-with-local-variable' target='_blank'>replace instance variable with local variable</a>
-            </td>
-          </tr>
       </tbody>
     </table>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
