--- a/rails_best_practices_output.html
+++ b/rails_best_practices_output.html
@@ -57,21 +57,9 @@
       to see more useful Rails Best Practices.
     </p>
     <p>
-        Found 3 warnings.
+        No error found. Cool!
     </p>
     <table>
-          <tr>
-              <td>
-                <input type="checkbox" class="error-type" id="LawOfDemeterReview" value="LawOfDemeterReview"
-                />&nbsp;<label for="LawOfDemeterReview">Law Of Demeter</label>
-              </td>
-          </tr>
-        <tr>
-          <td colspan="3">
-            <button id="show-all">Check all</button>
-            <button id="show-none">Uncheck all</button>
-          </td>
-        </tr>
     </table>
     <table class="result">
       <thead>
@@ -82,33 +70,6 @@
         </tr>
       </thead>
       <tbody>
-          <tr class="LawOfDemeterReview">
-            <td class='filename'>
-                app/views/offers/index.html.slim
-            </td>
-            <td class='line'>18</td>
-            <td class='message'>
-              <a href='http://rails-bestpractices.com/posts/15-the-law-of-demeter' target='_blank'>law of demeter</a>
-            </td>
-          </tr>
-          <tr class="LawOfDemeterReview">
-            <td class='filename'>
-                app/views/offers/index.html.slim
-            </td>
-            <td class='line'>20</td>
-            <td class='message'>
-              <a href='http://rails-bestpractices.com/posts/15-the-law-of-demeter' target='_blank'>law of demeter</a>
-            </td>
-          </tr>
-          <tr class="LawOfDemeterReview">
-            <td class='filename'>
-                app/views/offers/index.html.slim
-            </td>
-            <td class='line'>21</td>
-            <td class='message'>
-              <a href='http://rails-bestpractices.com/posts/15-the-law-of-demeter' target='_blank'>law of demeter</a>
-            </td>
-          </tr>
       </tbody>
     </table>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
