--- a/public/500.html
+++ b/public/500.html
@@ -51,7 +51,7 @@
     </div>
   </header>
   <div class="wrapper-inner">
-    <main class="content-main"><h2>Fehler</h2>
+    <main class="content-main"><h2>Dieses Angebot ist für kurze Zeit unsichtbar.</h2>
       <p>Leider ist ein Fehler aufgetreten. Wir werden versuchen ihn schnellstmöglich zu beheben. <br />
         <a href="/">Bis dahin kommst Du hier zurück auf unsere Startseite</a>.</p>
     </main>
