--- a/public/500.html
+++ b/public/500.html
@@ -52,8 +52,9 @@
   </header>
   <div class="wrapper-inner">
     <main class="content-main"><h2>Dieses Angebot ist für kurze Zeit unsichtbar.</h2>
-      <p>Leider ist ein Fehler aufgetreten. Wir werden versuchen ihn schnellstmöglich zu beheben. <br />
-        <a href="/">Bis dahin kommst Du hier zurück auf unsere Startseite</a>.</p>
+      <p>Bei diesem Angebot prüfen wir gerade, ob alle Infos stimmen. Deshalb ist es für kurze Zeit unsichtbar. <br />
+        <a href="/">Bis dahin kommst Du hier zurück auf unsere Startseite</a>.
+      </p>
     </main>
   </div>
 </div>
