issue #444 reverted 500er page to old text

--- a/public/500.html
+++ b/public/500.html
@@ -51,10 +51,9 @@
     </div>
   </header>
   <div class="wrapper-inner">
-    <main class="content-main"><h2>Dieses Angebot ist für kurze Zeit unsichtbar.</h2>
-      <p>Bei diesem Angebot prüfen wir gerade, ob alle Infos stimmen. Deshalb ist es für kurze Zeit unsichtbar. <br />
-        <a href="/">Bis dahin kommst Du hier zurück auf unsere Startseite</a>.
-      </p>
+    <main class="content-main"><h2>Fehler</h2>
+      <p>Leider ist ein Fehler aufgetreten. Wir werden versuchen ihn schnellstmöglich zu beheben. <br />
+        <a href="/">Bis dahin kommst Du hier zurück auf unsere Startseite</a>.</p>
     </main>
   </div>
 </div>
