For #1018: Finish design proposal for desktop

--- a/public/landingpage/mobbing-in-der-schule.html
+++ b/public/landingpage/mobbing-in-der-schule.html
@@ -21,35 +21,39 @@
 </head>
 <body>
 <header class="header-main">
-    <svg xmlns="http://www.w3.org/2000/svg" width="224" height="87" viewBox="0 0 224 87" role="img"
-         aria-label="clarat Family">
-        <title>clarat Family</title>
-        <g fill="none" fill-rule="evenodd">
-            <path fill="#AF1C3F"
-                  d="M167.55 86.09v-7.78l-5.96-9.272h5.33l2.293 4.39c.016.024.04.067.07.13.24.457.407.896.5 1.315.08-.38.245-.804.5-1.27.048-.085.08-.143.094-.175l2.27-4.39h5.344l-5.96 9.27v7.78h-4.48zm-23.948 0V69.037h4.645v13.068h5.773v3.983h-10.418zm-17.975 0h4.69V69.037h-4.69v17.05zm-12.156 0h-4.34l-1-7.374c-.072-.52-.136-1.098-.194-1.735-.058-.636-.11-1.33-.157-2.084-.11.723-.323 1.623-.64 2.703-.07.223-.122.39-.153.5l-2.316 7.99h-3.095l-2.317-7.99-.14-.5c-.325-1.08-.54-1.978-.64-2.692-.046.645-.1 1.283-.163 1.916-.062.633-.136 1.263-.22 1.892l-1.002 7.373h-4.32l2.632-17.052h4.598l2.573 8.794c.015.062.046.162.093.302.24.784.39 1.456.453 2.015.03-.304.09-.64.175-1.008.085-.37.2-.814.35-1.334l2.594-8.77h4.61l2.62 17.05zm-41.79-6.372h4.62l-1.733-5.625c-.055-.17-.13-.447-.222-.827l-.36-1.468c-.1.42-.2.82-.297 1.2-.097.38-.196.745-.297 1.095l-1.71 5.625zm-6.507 6.37l5.878-17.05h5.82l5.89 17.05h-4.62l-.86-3.05h-6.6l-.886 3.05h-4.62zm-20.083 0V69.04h10.442v3.74H49.62v2.957h5.574v3.657H49.62v6.697h-4.53z"/>
-            <path fill="#F3B529"
-                  d="M.997 51.458C.35 49.464 0 47.318 0 45.052c0-12.66 9.58-21.407 21.823-21.407 3.193 0 6.387.768 9.123 2.302v11.816C28.893 36.228 26.46 35 23.8 35c-5.323 0-9.505 4.144-9.505 9.592 0 2.786.97 5.166 2.632 6.866H.997"/>
-            <path d="M53.378.628h-13.84v50.83h13.84V.628"/>
-            <path fill="#F3B529"
-                  d="M39.54 51.458V.628h13.838v50.83M88.9 51.46c1.864-1.6 2.876-4.018 2.876-6.792 0-4.834-3.27-8.9-8.897-8.9-5.627 0-8.897 4.066-8.897 8.9 0 2.77 1.01 5.185 2.877 6.792l-16.122-.002c-.688-2.174-1.05-4.486-1.05-6.866 0-11.28 7.984-20.947 19.542-20.947 4.485 0 9.2 1.688 12.09 5.14V24.95h13.838v26.508h-16.26m25.46.002V24.95h13.84v6.444h.152c2.66-4.833 7.223-6.98 12.622-6.98h2.66v13.425c-1.9-1.074-3.724-1.305-5.853-1.305-7.68 0-9.582 5.14-9.582 11.893v3.032h-13.84m60.846.002c1.87-1.61 2.874-4.024 2.874-6.794 0-4.833-3.27-8.9-8.897-8.9-5.626 0-8.895 4.067-8.895 8.9 0 2.77 1.008 5.185 2.87 6.794l-16.122-.002c-.68-2.176-1.043-4.488-1.043-6.87 0-11.277 7.984-20.945 19.54-20.945 4.488 0 9.202 1.688 12.09 5.14V24.95h13.84l.003 26.51-16.26.002M201.954 51.46V36.458h-4.487V24.95h4.487V13.134h13.838V24.95h7.832v11.508h-7.832V51.46"/>
-        </g>
-    </svg>
+    <div class="layout-inner">
+        <svg class="header-main__logo" xmlns="http://www.w3.org/2000/svg" width="224" height="87" viewBox="0 0 224 87" role="img"
+             aria-label="clarat Family">
+            <title>clarat Family</title>
+            <g fill="none" fill-rule="evenodd">
+                <path fill="#AF1C3F"
+                      d="M167.55 86.09v-7.78l-5.96-9.272h5.33l2.293 4.39c.016.024.04.067.07.13.24.457.407.896.5 1.315.08-.38.245-.804.5-1.27.048-.085.08-.143.094-.175l2.27-4.39h5.344l-5.96 9.27v7.78h-4.48zm-23.948 0V69.037h4.645v13.068h5.773v3.983h-10.418zm-17.975 0h4.69V69.037h-4.69v17.05zm-12.156 0h-4.34l-1-7.374c-.072-.52-.136-1.098-.194-1.735-.058-.636-.11-1.33-.157-2.084-.11.723-.323 1.623-.64 2.703-.07.223-.122.39-.153.5l-2.316 7.99h-3.095l-2.317-7.99-.14-.5c-.325-1.08-.54-1.978-.64-2.692-.046.645-.1 1.283-.163 1.916-.062.633-.136 1.263-.22 1.892l-1.002 7.373h-4.32l2.632-17.052h4.598l2.573 8.794c.015.062.046.162.093.302.24.784.39 1.456.453 2.015.03-.304.09-.64.175-1.008.085-.37.2-.814.35-1.334l2.594-8.77h4.61l2.62 17.05zm-41.79-6.372h4.62l-1.733-5.625c-.055-.17-.13-.447-.222-.827l-.36-1.468c-.1.42-.2.82-.297 1.2-.097.38-.196.745-.297 1.095l-1.71 5.625zm-6.507 6.37l5.878-17.05h5.82l5.89 17.05h-4.62l-.86-3.05h-6.6l-.886 3.05h-4.62zm-20.083 0V69.04h10.442v3.74H49.62v2.957h5.574v3.657H49.62v6.697h-4.53z"/>
+                <path fill="#F3B529"
+                      d="M.997 51.458C.35 49.464 0 47.318 0 45.052c0-12.66 9.58-21.407 21.823-21.407 3.193 0 6.387.768 9.123 2.302v11.816C28.893 36.228 26.46 35 23.8 35c-5.323 0-9.505 4.144-9.505 9.592 0 2.786.97 5.166 2.632 6.866H.997"/>
+                <path d="M53.378.628h-13.84v50.83h13.84V.628"/>
+                <path fill="#F3B529"
+                      d="M39.54 51.458V.628h13.838v50.83M88.9 51.46c1.864-1.6 2.876-4.018 2.876-6.792 0-4.834-3.27-8.9-8.897-8.9-5.627 0-8.897 4.066-8.897 8.9 0 2.77 1.01 5.185 2.877 6.792l-16.122-.002c-.688-2.174-1.05-4.486-1.05-6.866 0-11.28 7.984-20.947 19.542-20.947 4.485 0 9.2 1.688 12.09 5.14V24.95h13.838v26.508h-16.26m25.46.002V24.95h13.84v6.444h.152c2.66-4.833 7.223-6.98 12.622-6.98h2.66v13.425c-1.9-1.074-3.724-1.305-5.853-1.305-7.68 0-9.582 5.14-9.582 11.893v3.032h-13.84m60.846.002c1.87-1.61 2.874-4.024 2.874-6.794 0-4.833-3.27-8.9-8.897-8.9-5.626 0-8.895 4.067-8.895 8.9 0 2.77 1.008 5.185 2.87 6.794l-16.122-.002c-.68-2.176-1.043-4.488-1.043-6.87 0-11.277 7.984-20.945 19.54-20.945 4.488 0 9.202 1.688 12.09 5.14V24.95h13.84l.003 26.51-16.26.002M201.954 51.46V36.458h-4.487V24.95h4.487V13.134h13.838V24.95h7.832v11.508h-7.832V51.46"/>
+            </g>
+        </svg>
+    </div>
 </header>
-<div class="hero">
+<div class="hero" style="background-image: url(assets/images/cover.jpg)">
     <div class="hero__container">
-        <h1 class="hero__headline">Mobbing in der Schule</h1>
-        <div class="hero__content">
-            <ul>
-                <li>hier müssen wir schauen</li>
-                <li>wie das Bildmotiv ist und ob</li>
-                <li>eine Abdunklung oder eher eine</li>
-                <li>Aufhellung Sinn hat</li>
-            </ul>
+        <div class="hero__content layout-inner">
+            <h1 class="hero__headline">Mobbing in der Schule</h1>
+            <div class="hero__list">
+                <ul>
+                    <li>hier müssen wir schauen</li>
+                    <li>wie das Bildmotiv ist und ob</li>
+                    <li>eine Abdunklung oder eher eine</li>
+                    <li>Aufhellung Sinn hat</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
 <main role="main" class="content">
-    <div class="content__container">
+    <div class="content__container layout-inner">
         <div class="content__left">
             <h2>Lucas ipsum dolor sit amet</h2>
             <p>Bren darth ric karrde -lom dooku tyranus wedge vivenda hutt. Maximilian mirialan omas solo bail wol
@@ -58,6 +62,8 @@
                 thrackan greedo qel-droma moff feeorin tsavong. Durge kessel panaka luuke binks. Lando jinn beru
                 xanatos. Derlin nien secura selonian epicanthix ugnaught. Farlax cato ranat mirta grodin kiffar p'w'eck
                 fisto saesee.</p>
+
+            <p>Utapaun shi'ido. Dengar rukh klivian derlin qrygg. Jar lowbacca binks biggs garindan. Leia oppo dorvalla lahara joelle raa naboo kobok. Solo thrackan bothan malastare chadra-fan. Watto moore adi melodie habassa saleucami muunilinst x1 noa. Dak togruta ssi-ruuk elrood defel d8. Abrion ikrit cathar mirax castell huk gamorrean muun ailyn. Lepi teneniel orus moddell disra ysanne lumiya moff carondian. Bollux bajic dunhausen selkath dalonbian koon chazrach nilgaard. Gamorrean gilad jodo mara aramandi piett. Dagobah t'landa fey'lya panaka wicket. Mccool valorum ebe ackbar.</p>
         </div>
         <div class="content__right">
             <h2>Elrood kael geonosian </h2>
@@ -68,27 +74,33 @@
                 carondian. Bollux bajic dunhausen selkath dalonbian koon chazrach nilgaard. Gamorrean gilad jodo mara
                 aramandi piett. Dagobah t'landa fey'lya panaka wicket. Mccool valorum ebe ackbar.
             </p>
+
+            <p>Bren darth ric karrde -lom dooku tyranus wedge vivenda hutt. Maximilian mirialan omas solo bail wol malastare c-3p0 bib. Davin barriss typho bail tund wat. Rhen organa calamari evocii chazrach ulic. Tyranus utai yuzzum tchuukthai cognus jaina skywalker mara vao. Mon x1 vader thul. Shaak cade ishi thrackan greedo qel-droma moff feeorin tsavong. Durge kessel panaka luuke binks. Lando jinn beru xanatos. Derlin nien secura selonian epicanthix ugnaught. Farlax cato ranat mirta grodin kiffar p'w'eck fisto saesee.</p>
         </div>
     </div>
     <div class="cta-container">
+        <div class="layout-inner">
         <div class="cta__right">
             <a class="btn" href="#0">Jetzt Hilfe finden ›</a>
         </div>
         <div class="cta__left">
             Das hier ist nur ein mehrzeiliger
-            Erklär-Text neben dem CTA-Button.
+            Erklär-Text neben dem CTA-Button.<br />
             Bitte gehen Sie weiter.
         </div>
+        </div>
     </div>
+
+    <div class="footer-main layout-inner">
+            <ul class="footer-main__list ">
+                <li><a href="#0">Impressum</a></li>
+                <li><a href="#0">Datenschutz</a></li>
+                <li><a href="#0">Blog</a></li>
+                <li><a href="http://www.clarat.org/family" target="_blank">www.clarat.org/family</a></li>
+            </ul>
+        </div>
 </main>
-<footer class="footer-main">
-    <ul class="footer-main__list">
-        <li><a href="#0">Impressum</a></li>
-        <li><a href="#0">Datenschutz</a></li>
-        <li><a href="#0">Blog</a></li>
-        <li><a href="http://www.clarat.org/family" target="_blank">www.clarat.org/family</a></li>
-    </ul>
-</footer>
+
 
 <script>
     window.ga = function () {
