For 1018: interim result of joint design session

--- a/public/landingpage/mobbing-in-der-schule.html
+++ b/public/landingpage/mobbing-in-der-schule.html
@@ -40,14 +40,9 @@
 <div class="hero" style="background-image: url(assets/images/cover.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
-            <h1 class="hero__headline">Mobbing in der Schule</h1>
+            <h1 class="hero__headline">Familien&shy;zusammen&shy;führung</h1>
             <div class="hero__list">
-                <ul>
-                    <li>hier müssen wir schauen</li>
-                    <li>wie das Bildmotiv ist und ob</li>
-                    <li>eine Abdunklung oder eher eine</li>
-                    <li>Aufhellung Sinn hat</li>
-                </ul>
+
             </div>
         </div>
     </div>
@@ -55,38 +50,27 @@
 <main role="main" class="content">
     <div class="content__container layout-inner">
         <div class="content__left">
-            <h2>Lucas ipsum dolor sit amet</h2>
-            <p>Bren darth ric karrde -lom dooku tyranus wedge vivenda hutt. Maximilian mirialan omas solo bail wol
-                malastare c-3p0 bib. Davin barriss typho bail tund wat. Rhen organa calamari evocii chazrach ulic.
-                Tyranus utai yuzzum tchuukthai cognus jaina skywalker mara vao. Mon x1 vader thul. Shaak cade ishi
-                thrackan greedo qel-droma moff feeorin tsavong. Durge kessel panaka luuke binks. Lando jinn beru
-                xanatos. Derlin nien secura selonian epicanthix ugnaught. Farlax cato ranat mirta grodin kiffar p'w'eck
-                fisto saesee.</p>
+            <b><p>Die Familie ist für viele Menschen sehr wichtig. Besonders Flüchtlinge in einer schweren Situation brauchen oft ihre Verwandten. Darum gibt es in Deutschland die Familienzusammenführung für Flüchtlinge.</p></b>
 
-            <p>Utapaun shi'ido. Dengar rukh klivian derlin qrygg. Jar lowbacca binks biggs garindan. Leia oppo dorvalla lahara joelle raa naboo kobok. Solo thrackan bothan malastare chadra-fan. Watto moore adi melodie habassa saleucami muunilinst x1 noa. Dak togruta ssi-ruuk elrood defel d8. Abrion ikrit cathar mirax castell huk gamorrean muun ailyn. Lepi teneniel orus moddell disra ysanne lumiya moff carondian. Bollux bajic dunhausen selkath dalonbian koon chazrach nilgaard. Gamorrean gilad jodo mara aramandi piett. Dagobah t'landa fey'lya panaka wicket. Mccool valorum ebe ackbar.</p>
+            <h2>Was bedeutet Familien&shy;zusammen&shy;führung?</h2>
+
+            <p>Viele Flüchtlinge kommen ohne ihre Familie nach Deutschland. Frau und Kind sind zum Beispiel noch in Syrien. Und der Mann kommt allein nach Deutschland. Die Familie wohnt also in zwei unterschiedlichen Ländern.
+                </p><p>Familienzusammenführung heißt, dass alle wieder zusammen leben. Die Familie aus dem Ausland kann ein Visum beantragen. Und dann auch nach Deutschland ziehen. Das nennt man auch Familiennachzug. Es bedeutet das gleiche wie Familien&shy;zusammen&shy;führung?.</p>
+
         </div>
         <div class="content__right">
-            <h2>Elrood kael geonosian </h2>
-            <p>Utapaun shi'ido. Dengar rukh klivian derlin qrygg. Jar lowbacca binks biggs garindan.
-                Leia oppo dorvalla lahara joelle raa naboo kobok. Solo thrackan bothan malastare chadra-fan. Watto moore
-                adi melodie habassa saleucami muunilinst x1 noa. Dak togruta ssi-ruuk elrood defel d8. Abrion ikrit
-                cathar mirax castell huk gamorrean muun ailyn. Lepi teneniel orus moddell disra ysanne lumiya moff
-                carondian. Bollux bajic dunhausen selkath dalonbian koon chazrach nilgaard. Gamorrean gilad jodo mara
-                aramandi piett. Dagobah t'landa fey'lya panaka wicket. Mccool valorum ebe ackbar.
-            </p>
 
-            <p>Bren darth ric karrde -lom dooku tyranus wedge vivenda hutt. Maximilian mirialan omas solo bail wol malastare c-3p0 bib. Davin barriss typho bail tund wat. Rhen organa calamari evocii chazrach ulic. Tyranus utai yuzzum tchuukthai cognus jaina skywalker mara vao. Mon x1 vader thul. Shaak cade ishi thrackan greedo qel-droma moff feeorin tsavong. Durge kessel panaka luuke binks. Lando jinn beru xanatos. Derlin nien secura selonian epicanthix ugnaught. Farlax cato ranat mirta grodin kiffar p'w'eck fisto saesee.</p>
+            <h2>Wie läuft eine Familien&shy;zusammen&shy;führung ab?</h2>
+
+            <p>Nur enge Familienmitglieder eines Flüchtlings können durch den Familiennachzug nach Deutschland ziehen. Das sind Ehefrau, Ehemann oder Kinder. Wenn ein Kind minderjährig ist und allein in Deutschland lebt, dürfen seine Eltern und minderjährigen Geschwister nach Deutschland kommen.</p>
+            <p>Die Familienmitglieder stellen bei der deutschen Botschaft ein Visum für den Familiennachzug. Der Flüchtling stellt in Deutschland bei der Ausländerbehörde einen Antrag. Die Regeln für den Familiennachzug bestimmt in Deutschland das Aufenthaltsgesetz. Es gibt viele Regeln. Zum Beispiel welche Aufenthaltserlaubnis der Flüchtling in Deutschland haben muss. Wichtig ist auch, wann genau der Flüchtling einen Antrag stellt. Er muss den Antrag innerhalb von 3 Monaten nach der Anerkennung als Flüchtling stellen. Das Alter der Kinder ist auch wichtig. Sie müssen minderjährig sein. Das heißt sie dürfen nicht älter als 18 Jahre alt sein. Die Regeln für den Familiennachzug sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Und manchmal muss man sich einen Anwalt suchen. Es gibt aber Berater, die alles verstehen. Sie kennen sich gut aus mit allen Gesetzen. Sie wissen, ob die Familie nach Deutschland kommen kann. Und wie man einen Antrag stellt.</p>
+
         </div>
     </div>
     <div class="cta-container">
         <div class="layout-inner">
-        <div class="cta__right">
+        <div class="cta__btn-container">
             <a class="btn" href="#0">Jetzt Hilfe finden ›</a>
-        </div>
-        <div class="cta__left">
-            Das hier ist nur ein mehrzeiliger
-            Erklär-Text neben dem CTA-Button.<br />
-            Bitte gehen Sie weiter.
         </div>
         </div>
     </div>
