--- a/public/landingpage/mobbing-in-der-schule.html
+++ b/public/landingpage/mobbing-in-der-schule.html
@@ -22,12 +22,11 @@
 <body>
 <header class="header-main">
     <div class="layout-inner">
-        <svg class="header-main__logo" xmlns="http://www.w3.org/2000/svg" width="224" height="87" viewBox="0 0 224 87" role="img"
+        <svg class="header-main__logo" xmlns="http://www.w3.org/2000/svg" width="224" height="60" viewBox="0 0 224 60" role="img"
              aria-label="clarat Family">
             <title>clarat Family</title>
             <g fill="none" fill-rule="evenodd">
-                <path fill="#AF1C3F"
-                      d="M167.55 86.09v-7.78l-5.96-9.272h5.33l2.293 4.39c.016.024.04.067.07.13.24.457.407.896.5 1.315.08-.38.245-.804.5-1.27.048-.085.08-.143.094-.175l2.27-4.39h5.344l-5.96 9.27v7.78h-4.48zm-23.948 0V69.037h4.645v13.068h5.773v3.983h-10.418zm-17.975 0h4.69V69.037h-4.69v17.05zm-12.156 0h-4.34l-1-7.374c-.072-.52-.136-1.098-.194-1.735-.058-.636-.11-1.33-.157-2.084-.11.723-.323 1.623-.64 2.703-.07.223-.122.39-.153.5l-2.316 7.99h-3.095l-2.317-7.99-.14-.5c-.325-1.08-.54-1.978-.64-2.692-.046.645-.1 1.283-.163 1.916-.062.633-.136 1.263-.22 1.892l-1.002 7.373h-4.32l2.632-17.052h4.598l2.573 8.794c.015.062.046.162.093.302.24.784.39 1.456.453 2.015.03-.304.09-.64.175-1.008.085-.37.2-.814.35-1.334l2.594-8.77h4.61l2.62 17.05zm-41.79-6.372h4.62l-1.733-5.625c-.055-.17-.13-.447-.222-.827l-.36-1.468c-.1.42-.2.82-.297 1.2-.097.38-.196.745-.297 1.095l-1.71 5.625zm-6.507 6.37l5.878-17.05h5.82l5.89 17.05h-4.62l-.86-3.05h-6.6l-.886 3.05h-4.62zm-20.083 0V69.04h10.442v3.74H49.62v2.957h5.574v3.657H49.62v6.697h-4.53z"/>
+
                 <path fill="#F3B529"
                       d="M.997 51.458C.35 49.464 0 47.318 0 45.052c0-12.66 9.58-21.407 21.823-21.407 3.193 0 6.387.768 9.123 2.302v11.816C28.893 36.228 26.46 35 23.8 35c-5.323 0-9.505 4.144-9.505 9.592 0 2.786.97 5.166 2.632 6.866H.997"/>
                 <path d="M53.378.628h-13.84v50.83h13.84V.628"/>
@@ -41,16 +40,17 @@
     <div class="hero__container">
         <div class="hero__content layout-inner">
             <h1 class="hero__headline">Familien&shy;zusammen&shy;führung</h1>
-            <div class="hero__list">
-
-            </div>
         </div>
     </div>
 </div>
 <main role="main" class="content">
     <div class="content__container layout-inner">
+
         <div class="content__left">
             <b><p>Die Familie ist für viele Menschen sehr wichtig. Besonders Flüchtlinge in einer schweren Situation brauchen oft ihre Verwandten. Darum gibt es in Deutschland die Familienzusammenführung für Flüchtlinge.</p></b>
+
+            <a class="btn" href="#0">Jetzt Hilfe finden ›</a>
+
 
             <h2>Was bedeutet Familien&shy;zusammen&shy;führung?</h2>
 
@@ -67,20 +67,19 @@
 
         </div>
     </div>
-    <div class="cta-container">
-        <div class="layout-inner">
-        <div class="cta__btn-container">
-            <a class="btn" href="#0">Jetzt Hilfe finden ›</a>
-        </div>
-        </div>
-    </div>
+    <!--<div class="cta-container">-->
+        <!--<div class="layout-inner">-->
+        <!--<div class="cta__btn-container">-->
+        <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <div class="footer-main layout-inner">
             <ul class="footer-main__list ">
-                <li><a href="#0">Impressum</a></li>
-                <li><a href="#0">Datenschutz</a></li>
-                <li><a href="#0">Blog</a></li>
-                <li><a href="http://www.clarat.org/family" target="_blank">www.clarat.org/family</a></li>
+                <li><a href="https://www.clarat.org/refugees/impressum" target="_blank">Impressum</a></li>
+                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">Datenschutz</a></li>
+                <li><a href="http://blog.clarat.org/" target="_blank">Blog</a></li>
+                <li><a href="http://www.clarat.org/" target="_blank">www.clarat.org</a></li>
             </ul>
         </div>
 </main>
