for #1018 refine intro text

--- a/public/landingpage/mobbing-in-der-schule.html
+++ b/public/landingpage/mobbing-in-der-schule.html
@@ -40,6 +40,8 @@
     <div class="hero__container">
         <div class="hero__content layout-inner">
             <h1 class="hero__headline">Familien&shy;zusammen&shy;führung</h1>
+
+            <div class="hero__intro"> Die Familie ist für viele Menschen sehr wichtig. Besonders Flüchtlinge in einer schweren Situation brauchen oft ihre Verwandten. Darum gibt es in Deutschland die Familienzusammenführung für Flüchtlinge.</div>
         </div>
     </div>
 </div>
@@ -47,7 +49,8 @@
     <div class="content__container layout-inner">
 
         <div class="content__left">
-            <b><p>Die Familie ist für viele Menschen sehr wichtig. Besonders Flüchtlinge in einer schweren Situation brauchen oft ihre Verwandten. Darum gibt es in Deutschland die Familienzusammenführung für Flüchtlinge.</p></b>
+
+            <p class="content__mobile-intro"><b>Die Familie ist für viele Menschen sehr wichtig. Besonders Flüchtlinge in einer schweren Situation brauchen oft ihre Verwandten. Darum gibt es in Deutschland die Familienzusammenführung für Flüchtlinge.</b></p>
 
             <a class="btn" href="#0">Jetzt Hilfe finden ›</a>
 
