update file name cta href #1018

--- a/public/landingpage/familienzusammenfuehrung.html
+++ b/public/landingpage/familienzusammenfuehrung.html
@@ -56,7 +56,7 @@
             <p>Viele Flüchtlinge kommen ohne ihre Familie nach Deutschland. Frau und Kind sind zum Beispiel noch in Syrien. Und der Mann kommt allein nach Deutschland. Die Familie wohnt also in zwei unterschiedlichen Ländern.
                 </p><p>Familienzusammenführung heißt, dass alle wieder zusammen leben. Die Familie aus dem Ausland kann ein Visum beantragen. Und dann auch nach Deutschland ziehen. Das nennt man auch Familiennachzug. Es bedeutet das gleiche wie Familien&shy;zusammen&shy;führung?</p>
 
-            <a class="btn" id="lp-button" href="#0">Jetzt Hilfe finden ›</a>
+            <a class="btn" id="lp-button" href="https://www.clarat.org/refugees/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=Familienzusammenf%C3%BChrung&search_form%5Bsearch_location%5D=&search_form%5Bcategory%5D=&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal%2Cfax%2Cletter&search_form%5Bage%5D=&search_form%5Btarget_audience%5D=&search_form%5Bexclusive_gender%5D=&search_form%5Blanguage%5D=&search_form%5Bsection%5D=family">Jetzt Hilfe finden ›</a>
 
         </div>
         <div class="content__right">
