--- a/public/landingpage/familienzusammenfuehrung.html
+++ b/public/landingpage/familienzusammenfuehrung.html
@@ -7,6 +7,26 @@
     <title>Familienzusammenführung - Einfach Hilfe finden mit clarat.org</title>
     <meta name="description" content="Die Regeln für die Familienzusammenführung für Flüchtlinge sind nicht einfach zu verstehen. Es gibt viele Ausnahmen. Hier findest du Hilfe!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
+    <meta content="" property="og:site_name" />
+    <meta content="" property="og:image" />
+    <link href="/favicons/apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57" />
+    <link href="/favicons/apple-touch-icon-60x60.png" rel="apple-touch-icon" sizes="60x60" />
+    <link href="/favicons/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72" />
+    <link href="/favicons/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+    <link href="/favicons/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114" />
+    <link href="/favicons/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+    <link href="/favicons/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144" />
+    <link href="/favicons/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="/favicons/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
+    <link href="/favicons/android-chrome-192x192.png" rel="icon" sizes="192x192" type="image/png" />
+    <link href="/favicons/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png" />
+    <link href="/favicons/favicon--production-32x32.png" rel="icon" sizes="32x32" type="image/png" />
+    <link href="/favicons/favicon--production-16x16.png" rel="icon" sizes="16x16" type="image/png" />
+    <link href="/favicons/android-chrome-manifest.json" rel="manifest" />
+    <meta content="#f4b528" name="msapplication-TileColor" />
+    <meta content="/favicons/mstile-144x144.png" name="msapplication-TileImage" />
+    <meta content="#F4B528" name="theme-color" />
     <link rel="stylesheet" href="assets/css/main.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
@@ -54,7 +74,7 @@
             <h2>Was bedeutet Familien&shy;zusammen&shy;führung?</h2>
 
             <p>Viele Flüchtlinge kommen ohne ihre Familie nach Deutschland. Frau und Kind sind zum Beispiel noch in Syrien. Und der Mann kommt allein nach Deutschland. Die Familie wohnt also in zwei unterschiedlichen Ländern.
-                </p><p>Familienzusammenführung heißt, dass alle wieder zusammen leben. Die Familie aus dem Ausland kann ein Visum beantragen. Und dann auch nach Deutschland ziehen. Das nennt man auch Familiennachzug. Es bedeutet das gleiche wie Familien&shy;zusammen&shy;führung?</p>
+                </p><p>Familienzusammenführung heißt, dass alle wieder zusammen leben. Die Familie aus dem Ausland kann ein Visum beantragen. Und dann auch nach Deutschland ziehen. Das nennt man auch Familiennachzug. Es bedeutet das gleiche wie Familien&shy;zusammen&shy;führung.</p>
 
             <a class="btn" id="lp-button" href="https://www.clarat.org/refugees/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=Familienzusammenf%C3%BChrung&search_form%5Bsearch_location%5D=&search_form%5Bcategory%5D=&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal%2Cfax%2Cletter&search_form%5Bage%5D=&search_form%5Btarget_audience%5D=&search_form%5Bexclusive_gender%5D=&search_form%5Blanguage%5D=&search_form%5Bsection%5D=family">Jetzt Hilfe finden ›</a>
 
