--- a/public/themen/fluechtlingshilfe.html
+++ b/public/themen/fluechtlingshilfe.html
@@ -55,7 +55,7 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/Flüchtlingshilfe.jpg)">
+<div class="hero" style="background-image: url(assets/images/Fluechtlingshilfe.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
             <h1 class="hero__headline">Flüchtlingshilfe</h1>
