--- a/public/themen/fluechtlingshilfe-ar.html
+++ b/public/themen/fluechtlingshilfe-ar.html
@@ -55,7 +55,7 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/Flüchtlingshilfe-ar.jpg)">
+<div class="hero" style="background-image: url(assets/images/Fluechtlingshilfe-ar.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
             <h1 class="hero__headline">مساعدة اللاجئين</h1>
